2009-10-23  Eric Seidel  <eric@webkit.org>

Reviewed by Eric Carlson.

        fast/media/mq-transform-02.html failed on Leopard Commit Bot
        https://bugs.webkit.org/show_bug.cgi?id=30700

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (resetDefaultsToConsistentValues): Update QuickTime version check.

Canonical link: https://commits.webkit.org/41438@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49984 268f45cc-cd09-0410-ab3c-d52691b4dbfc